Customers can create bookings and bookings now create transactions.